--- a/mla-event-rentals/package.json
+++ b/mla-event-rentals/package.json
@@ -15,8 +15,14 @@
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
+    "react-switch": "^7.0.0",
+    "react-use-navigate": "^0.1.1",
     "styled-components": "^5.3.5",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
